Criada persistência em banco